--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -3,7 +3,7 @@
     <ul>
       <div *ngFor='let quote of quotes; let i = index'>
        <li>{{quote.quote}}</li>
-       <button (click)='toggleDetails(i)'>Toggle</button>
+       <button (click)='toggleDetails(i)'>Toggle details</button>
         <app-quote-detailed *ngIf='quote.showDescription' [quote]='quote' (isComplete) = 'deleteQuote($event,i)'></app-quote-detailed>
     </div>
     </ul>
