--- a/src/app/quote-detailed/quote-detailed.component.html
+++ b/src/app/quote-detailed/quote-detailed.component.html
@@ -1,6 +1,6 @@
 <p>{{quote.author}}</p>
 <p>{{quote.publisher}}</p>
-
+<p>This quote will be complete in {{quote.completeDate|dateCount}} days</p>
 <p>{{quote.upvote}}</p>
 <p>{{quote.downvote}}</p>
 <button (click)= 'quoteDelete(true)'>Delete Quote</button>
