--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,10 +1,12 @@
- <h1>Inspirational Quotes</h1>
+<div class="angular">
+<h1>Inspirational Quotes</h1>
     <hr>
     <ul>
       <div *ngFor='let quote of quotes; let i = index'>
-       <li>{{quote.quote}}</li>
+       <li>{{quote.quote}} created on {{quote.completeDate | date}}</li>
        <button (click)='toggleDetails(i)'>Toggle details</button>
         <app-quote-detailed *ngIf='quote.showDescription' [quote]='quote' (isComplete) = 'deleteQuote($event,i)'></app-quote-detailed>
     </div>
     </ul>
     <p *ngIf='quotes.length > 4'>too many quotes</p>
+</div>
