--- a/src/app/quote-detailed/quote-detailed.component.html
+++ b/src/app/quote-detailed/quote-detailed.component.html
@@ -1,5 +1,5 @@
-<p>{{quote.author}}</p>
-<p>{{quote.publisher}}</p>
+<p>Author: {{quote.author}}</p>
+<p>Publisher: {{quote.publisher}}</p>
 <p>This quote will be complete in {{quote.completeDate|dateCount}} days</p>
 <p>{{quote.upvote}}</p>
 <p>{{quote.downvote}}</p>
