--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,17 +1,17 @@
 <div class="container-fluid">
-    <h2 class="text-center">Create a new Goal</h2>
+    <h2 class="text-center">Create a Quote</h2>
     <hr>
     <form>
         <div class="form-group">
   
-            <label for="name">Publisher</label>
+            <label for="name">Name</label>
             <input type="text" required class="form-control" id="name">
   
         </div>
         <div class="form-group">
   
-            <label for="description">Description</label>
-            <textarea class="form-control" id="description" rows="4" required></textarea>
+            <label for="description">Quote</label>
+            <textarea class="form-control" id="description" rows="2" required></textarea>
   
         </div>
         <div class="form-group">
