--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,8 +1,13 @@
 <div class="container">
-  <h1>Inspirational Quotes</h1>
+  <h1 style="text-align: center;">Inspirational Quotes</h1>
   <hr>
   <div class="row">
     <div class="col-md-6">
+      <app-quote-form></app-quote-form>
+    </div>
+    <div class="col-md-6">
+      <h2>Quotes</h2>
+      <hr>
       <div *ngFor='let quote of quotes; let i = index'>
         <div>
           <h6>{{quote.quote}} created on {{quote.completeDate | date}}</h6>
@@ -14,9 +19,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-6">
-      <app-quote-form></app-quote-form>
-    </div>
+    
   </div>
 
   <p *ngIf='quotes.length > 4'>too many quotes</p>
