--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -2,30 +2,31 @@
     <h2 class="text-center">Create a Quote</h2>
     <hr>
     <form>
+       
         <div class="form-group">
-
+  
             <label for="description">Quote</label>
             <textarea class="form-control" id="description" rows="2" required></textarea>
-
+  
         </div>
 
         <div class="form-group">
-
-            <label for="author">Author</label>
-            <input type="text" required class="form-control" id="author">
-
+  
+            <label for="name">Author</label>
+            <input type="text" required class="form-control" id="name">
+  
         </div>
 
         <div class="form-group">
-
+  
             <label for="name">Publisher</label>
             <input type="text" required class="form-control" id="name">
-
+  
         </div>
         <div class="form-group">
             <label for="complete">Completion</label>
             <input type='date' id="complete" required>
-
+  
         </div>
     </form>
-</div>
+  </div>
