--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -3,15 +3,17 @@
   <hr>
   <div class="row">
     <div class="col-md-6">
-      <app-quote-form></app-quote-form>
+      <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
     </div>
     <div class="col-md-6">
       <h2>Quotes</h2>
       <hr>
       <div *ngFor='let quote of quotes; let i = index'>
         <div>
-          <h6>{{quote.quote}} created on {{quote.completeDate | date}}</h6>
-          <button (click)='toggleDetails(i)'>Toggle details</button>
+          <button (click)='toggleDetails(i)' class="btn btn-warning">Show/Hide details</button> 
+          <br>
+          <br>
+          <h6>{{quote.quote | uppercase}}</h6>
         </div>
 
         <div *ngIf='quote.showDescription'>
