--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css"
+@import "~bootstrap/dist/css/bootstrap.css";
 
+/* body {
+    background-image: url(https://res.cloudinary.com/zilfa/image/upload/v1604169364/jason-dent-He_YXURoPyA-unsplash_kkach8.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+ */
