--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         
-        <!-- <div class="form-group">
+        <div class="form-group">
 
             <label for="complete">Completion</label>
             <input type='date' id="complete" [(ngModel)]="newQuote.completeDate" name="completeDate"
@@ -41,7 +41,7 @@
             <div [hidden]="completeDate.valid || completeDate.pristine" class="alert alert-danger">
                 <p>Date is required</p>
             </div>
-        </div> -->
+        </div>
         <button type="submit" class="btn btn-success">Submit</button>
     </form>
 </div>
