--- a/src/app/quote-detailed/quote-detailed.component.html
+++ b/src/app/quote-detailed/quote-detailed.component.html
@@ -1,5 +1,5 @@
-<p> <span style="font-style: italic;">authored by</span>  {{quote.author | uppercase}}</p>
-<p> <span style="font-style: italic;">published by</span> {{quote.publisher | uppercase}}; {{quote.completeDate|dateCount}} days ago </p>
+<p>Author:{{quote.author | uppercase}}</p>
+<p>Publisher:{{quote.publisher | uppercase}}; {{quote.completeDate|dateCount}} days ago </p>
 <button (click)='upvote()' class="btn btn-success">{{upVote}} Upvote</button>
 <button (click)='downvote()' class="btn btn-warning">{{downVote}} Downvote</button> &nbsp; &nbsp;&nbsp;&nbsp;
 <button (click)= 'quoteDelete(true)' class="btn btn-danger">Delete</button>
