--- a/src/app/quote-detailed/quote-detailed.component.html
+++ b/src/app/quote-detailed/quote-detailed.component.html
@@ -1,7 +1,7 @@
-<p>Author: {{quote.author | uppercase}}</p>
-<p>Publisher: {{quote.publisher | uppercase}}</p>
-<button (click)='upvote()' class="btn btn-success">{{upVote}} Upvote</button>
-<button (click)='downvote()' class="btn btn-warning">{{downVote}} Downvote</button> &nbsp; &nbsp;&nbsp;&nbsp;
-<button (click)= 'quoteDelete(true)' class="btn btn-danger">Delete</button>
+<p style="text-align: center; font-size: 20px;">"{{quote.author | uppercase}}"</p>
+<p style="text-align: center;"> <small>Posted by {{quote.publisher}}, {{quote.completeDate|dateCount}} days ago </small> </p>
+<button style="margin-right: 3px;" (click)='upvote()' class="btn btn-success">{{upVote}} <i class="fas fa-thumbs-up"></i>vote</button> 
+<button (click)='downvote()' class="btn btn-warning">{{downVote}} <i class="fas fa-thumbs-down"></i>vote</button>
+<button (click)= 'quoteDelete(true)' style="margin-left: 250px;" class="btn btn-danger"><i class="fas fa-trash-alt"></i> Delete</button>
 <br>
 <br>
