--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
-    <h3>Add Quote</h3>
+    <h2 style="text-align: center;">Add Quote</h2>
     <hr>
     <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
 
         <div class="form-group">
 
             <label for="quote">Quote</label>
-            <textarea style="width: 400px;" class="form-control" id="quote" rows="4" [(ngModel)]="newQuote.quote" name="quote"
+            <textarea style="width: 400px;" class="form-control" id="quote" rows="3" [(ngModel)]="newQuote.quote" name="quote"
                 #quote="ngModel" required></textarea>
             <div [hidden]="quote.valid || quote.pristine" class="alert alert-danger">
                 <p>Quote is required</p>
@@ -33,7 +33,7 @@
             </div>
         </div>
         
-        <!-- <div class="form-group">
+        <div class="form-group">
 
             <label for="complete">Completion</label> &nbsp;
             <input type='date' id="complete" [(ngModel)]="newQuote.completeDate" name="completeDate"
@@ -41,7 +41,7 @@
             <div [hidden]="completeDate.valid || completeDate.pristine" class="alert alert-danger">
                 <p>Date is required</p>
             </div>
-        </div> -->
-        <button type="submit" class="btn btn-success">Submit</button>
+        </div>
+        <button style="margin-left: 80px; width: 180px;" type="submit" class="btn btn-info">Submit</button>
     </form>
 </div>
