--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,22 +1,25 @@
 <div class="container">
-  <h1 style="text-align: center;">Inspirational Quotes</h1>
+  <h1>Inspiring Motivational Quotes for Being Happier!</h1>
   <hr>
   <div class="row">
     <div class="col-md-6">
       <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
     </div>
     <div class="col-md-6">
-      <h2>Quotes</h2>
+      <h2 style="text-align: center;">Explore quotes</h2>
       <hr>
+      <br>
       <div *ngFor='let quote of quotes; let i = index'>
         <div>
-          <h6>{{quote.quote | uppercase}}</h6>
-          <button (click)='toggleDetails(i)' class="btn btn-info">Show/Hide details</button>
+          <h6 class="quote"><i class="fas fa-quote-left"></i> {{quote.quote}} <i class="fas fa-quote-right"></i></h6>
+          <button (click)='toggleDetails(i)' style="margin-left: 440px;" class="btn btn-info"><i
+              class="fas fa-eye"></i>View</button>
         </div>
         <br>
         <div *ngIf='quote.showDescription'>
           <app-quote-detailed [quote]='quote' (isComplete)='deleteQuote($event,i)'></app-quote-detailed>
         </div>
+        <hr>
       </div>
     </div>
 
